Added patterns(dev for d10)

--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -38,6 +38,7 @@ module:
   text: 0
   toolbar: 0
   tour: 0
+  ui_patterns: 0
   update: 0
   user: 0
   views_ui: 0
@@ -46,4 +47,5 @@ module:
 theme:
   olivero: 0
   claro: 0
+  patterns: 0
 profile: standard
