--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
-        "drupal/ui_patterns": "^1.3",
+        "drupal/ui_patterns": "1.x-dev@dev",
         "drush/drush": "^11.3"
     },
     "conflict": {
