--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -22,6 +22,7 @@ module:
   help: 0
   history: 0
   image: 0
+  layout_discovery: 0
   link: 0
   menu_link_content: 0
   menu_ui: 0
@@ -39,6 +40,8 @@ module:
   toolbar: 0
   tour: 0
   ui_patterns: 0
+  ui_patterns_layouts: 0
+  ui_patterns_library: 0
   update: 0
   user: 0
   views_ui: 0
