--- a/web/themes/custom/patterns/package.json
+++ b/web/themes/custom/patterns/package.json
@@ -13,7 +13,9 @@
     "@storybook/html": "^6.5.13",
     "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
-    "babel-loader": "^8.3.0"
+    "babel-loader": "^8.3.0",
+    "drupal-attribute": "^1.0.2",
+    "twig-loader": "^0.5.5"
   },
   "dependencies": {},
   "scripts": {
