--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -46,9 +46,8 @@ module:
   user: 0
   views_ui: 0
   views: 10
-  standard: 1000
 theme:
   olivero: 0
   claro: 0
   patterns: 0
-profile: standard
+profile: minimal
