--- a/web/themes/custom/patterns/package.json
+++ b/web/themes/custom/patterns/package.json
@@ -15,7 +15,8 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.3.0",
     "drupal-attribute": "^1.0.2",
-    "twig-loader": "^0.5.5"
+    "twig-loader": "^0.5.5",
+    "yaml-loader": "^0.8.0"
   },
   "dependencies": {},
   "scripts": {
