--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-project-message": "^9.0",
         "drupal/core-recommended": "^9.0",
         "drupal/ui_patterns": "1.x-dev@dev",
+        "drupal/ui_patterns_layout_builder": "^1.1",
         "drush/drush": "^11.3"
     },
     "conflict": {
