--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -11,9 +11,11 @@
     "@storybook/html": "^7.0.0-beta.19",
     "@storybook/html-vite": "^7.0.0-beta.19",
     "@storybook/testing-library": "^0.0.13",
+    "@vituum/vite-plugin-twig": "^0.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.0-beta.19",
+    "twig": "^1.15.4",
     "vite": "^4.0.4"
   },
   "dependencies": {},
