--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -11,7 +11,7 @@
     "@storybook/html": "^7.0.0-beta.19",
     "@storybook/html-vite": "^7.0.0-beta.19",
     "@storybook/testing-library": "^0.0.13",
-    "@vituum/vite-plugin-twig": "^0.1.7",
+    "js-yaml": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.0-beta.19",
