--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@originjs/vite-plugin-content": "^1.0.2",
     "@storybook/addon-essentials": "^7.0.0-beta.19",
     "@storybook/addon-interactions": "^7.0.0-beta.19",
     "@storybook/addon-links": "^7.0.0-beta.19",
@@ -11,7 +12,7 @@
     "@storybook/html": "^7.0.0-beta.19",
     "@storybook/html-vite": "^7.0.0-beta.19",
     "@storybook/testing-library": "^0.0.13",
-    "js-yaml": "^4.1.0",
+    "drupal-attribute": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.0-beta.19",
