--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "storybook": "^7.0.0-beta.19",
     "twig": "^1.15.4",
+    "twig-drupal-filters": "^3.2.0",
     "vite": "^4.0.4"
   },
   "dependencies": {},
