--- a/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.ui_patterns.yml
+++ b/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.ui_patterns.yml
@@ -16,31 +16,23 @@ a_button:
       description: Optional Link
       preview: '#'
   settings:
-    type:
-      type: radios
-      label: Choose a modifier
-      default_value: default
+    # these settings presented in every component
+    modifier:
+      type: checkboxes
+      label: Choose a modifier class
       options:
-        default: Default
         a-button--second: Second
         a-button--third: Third
         a-button--fourth: Fourth
         a-button--fifth: Fifth
+        a-button--icon-big: Button with large icon
+    extra_classes:
+      type: textfield
+      label: Add extra CSS classes separated by spaces.
+    # next settings individual per component
     icon:
       type: select
       label: Icon
-      default_value: default
       options:
-        default: No icon
         close: Close
         add: Add
-    iconSize:
-      type: select
-      label: Icon size
-      default_value: default
-      options:
-        default: Default
-        a-button--icon-size-big: Big
-    buttonCustomClasses:
-      type: textfield
-      label: Set a custom classnames for button. Split classnames with single space
