--- a/web/themes/custom/caesar/templates/patterns/atoms/icon/a-icon.ui_patterns.yml
+++ b/web/themes/custom/caesar/templates/patterns/atoms/icon/a-icon.ui_patterns.yml
@@ -2,6 +2,8 @@ a_icon:
   use: "@atoms/icon/a-icon.html.twig"
   label: Atoms/Icon
   description: Icon Component
+  extends:
+    - a_button.settings
   fields:
     content:
       type: text
@@ -11,6 +13,6 @@ a_icon:
       # https://ui-patterns.readthedocs.io/en/8.x-1.x/content/patterns-definition.html#pattern-definitions
       preview: 'Add'
   settings:
-    extra_classes:
+    a_icon_extra_classes:
       type: textfield
-      label: Add extra CSS classes separated by spaces.
+      label: Add extra CSS classes for atom icon separated by spaces.
