--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -13,11 +13,11 @@
     "@storybook/html-vite": "^7.0.0-beta.19",
     "@storybook/testing-library": "^0.0.13",
     "drupal-attribute": "^1.0.2",
+    "drupal-twig-extensions": "^1.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.0-beta.19",
     "twig": "^1.15.4",
-    "twig-drupal-filters": "^3.2.0",
     "vite": "^4.0.4"
   },
   "dependencies": {},
