--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -7,22 +7,58 @@
     "@originjs/vite-plugin-content": "^1.0.2",
     "@storybook/addon-essentials": "^7.0.0-beta.19",
     "@storybook/addon-interactions": "^7.0.0-beta.19",
-    "@storybook/addon-links": "^7.0.0-beta.19",
     "@storybook/blocks": "^7.0.0-beta.19",
     "@storybook/html": "^7.0.0-beta.19",
     "@storybook/html-vite": "^7.0.0-beta.19",
     "@storybook/testing-library": "^0.0.13",
+    "cli-real-favicon": "^0.0.8",
     "drupal-attribute": "^1.0.2",
     "drupal-twig-extensions": "^1.0.0-beta.4",
+    "oslllo-svg-fixer": "^2.2.0",
+    "prepend-file-cli": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.0-beta.19",
-    "twig": "^1.15.4",
+    "stylelint": "^14.16.1",
+    "svg-sprite": "^2.0.2",
+    "svgo": "^3.0.2",
+    "twig": "^1.15.4"
+  },
+  "dependencies": {
+    "@splidejs/splide": "^4.1.4",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-yml": "^1.4.0",
+    "glob": "^8.1.0",
+    "js-yaml": "^4.1.0",
+    "postcss": "^8.4.21",
+    "postcss-custom-media": "^9.0.1",
+    "postcss-custom-media-generator": "^1.1.0",
+    "postcss-nested": "^6.0.0",
+    "postcss-pxtorem": "^6.0.0",
+    "prettier": "^2.8.3",
+    "rollup-plugin-copy": "^3.4.0",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-order": "^6.0.1",
     "vite": "^4.0.4"
   },
-  "dependencies": {},
   "scripts": {
+    "build": "vite build",
+    "build-storybook": "storybook build",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "stylelint \"**/*.css\" $FIX_FLAG && eslint --ext .yml . $FIX_FLAG && eslint . $FIX_FLAG --max-warnings 0",
+    "lint-fix": "FIX_FLAG=--fix yarn lint",
+    "favicon": "mkdir -p favicon && real-favicon generate favicon.config.json favicon.output.json favicon && rm favicon.output.json",
+    "sprite": "yarn sprite:createTemp && yarn sprite:strokeToFill && yarn sprite:optimize && yarn sprite:create && yarn sprite:generateText && yarn sprite:removeTemp",
+    "sprite:createTemp": "mkdir -p sprite-build-temp",
+    "sprite:strokeToFill": "oslllo-svg-fixer -s assets/images/svg -d sprite-build-temp",
+    "sprite:optimize": "svgo -f sprite-build-temp -o sprite-build-temp",
+    "sprite:create": "svg-sprite -s --svg-xmldecl=false --symbol-sprite='sprite.svg' --symbol-dest=assets/images --shape-id-generator='svg-%s' sprite-build-temp/*.svg",
+    "sprite:generateText": "prepend assets/images/sprite.svg \"<!--\n    DON'T CHANGE THIS FILE MANUALLY.\n\n    It's generated automatically by 'yarn sprite' command.\n\n    You have to re-generate 'sprite.svg' every time you\n    modifying icons in 'assets/images/svg/' folder\n-->\n\"",
+    "sprite:removeTemp": "rm -R sprite-build-temp"
   }
 }
