--- a/web/themes/custom/caesar/templates/patterns/molecules/grid/m-grid.ui_patterns.yml
+++ b/web/themes/custom/caesar/templates/patterns/molecules/grid/m-grid.ui_patterns.yml
@@ -1,8 +1,12 @@
 m_grid:
-  use: "@molecules/grid/m-grid.html.twig"
+  use: '@molecules/grid/m-grid.html.twig'
   label: Molecules/Grid
   description: Grid Component
   fields:
     items:
       type: render
       label: Items
+  settings:
+    extra_classes:
+      type: textfield
+      label: Add extra CSS classes for atom button separated by spaces.
