--- a/web/themes/custom/caesar/templates/patterns/atoms/icon/a-icon.ui_patterns.yml
+++ b/web/themes/custom/caesar/templates/patterns/atoms/icon/a-icon.ui_patterns.yml
@@ -1,5 +1,5 @@
 a_icon:
-  use: "@atoms/icon/a-icon.html.twig"
+  use: '@atoms/icon/a-icon.html.twig'
   label: Atoms/Icon
   description: Icon Component
   fields:
