--- a/web/themes/custom/caesar/templates/patterns/atoms/menu/a-menu.ui_patterns.yml
+++ b/web/themes/custom/caesar/templates/patterns/atoms/menu/a-menu.ui_patterns.yml
@@ -1,5 +1,5 @@
 a_menu:
-  use: "@atoms/menu/a-menu.html.twig"
+  use: '@atoms/menu/a-menu.html.twig'
   label: Atoms/Menu
   description: Menu Component
   fields:
