--- a/web/themes/custom/caesar/caesar.info.yml
+++ b/web/themes/custom/caesar/caesar.info.yml
@@ -6,6 +6,7 @@ base theme: false
 dependencies:
   - ui_patterns:ui_patterns
   - ui_patterns_library:ui_patterns_library
+  # TODO: Add components! module
 regions:
   header: 'Header'
   content: 'Content'
