Added extra package.json with dependencies

--- a/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.ui_patterns.yml
+++ b/web/themes/custom/caesar/templates/patterns/atoms/button/a-button.ui_patterns.yml
@@ -38,11 +38,9 @@ a_button:
     - a-button:
         css:
           component:
-            //unpkg.com/open-props@1.5.3/open-props.min.css:
-              { type: external, minified: true }
-            dist/styles.css: {}
+            a-button.css: {}
         js:
-          dist/script.js: {}
+          a-button.js: {}
         dependencies:
           - core/normalize
           - core/drupal
