--- a/web/themes/custom/caesar/templates/patterns/atoms/menu/a-menu.ui_patterns.yml
+++ b/web/themes/custom/caesar/templates/patterns/atoms/menu/a-menu.ui_patterns.yml
@@ -10,3 +10,7 @@ a_menu:
     extra_classes:
       type: textfield
       label: Add extra CSS classes for atom button separated by spaces.
+  libraries:
+    - a-menu:
+        js:
+          a-menu.js: {}
