--- a/web/themes/custom/caesar/templates/patterns/molecules/grid/m-grid.ui_patterns.yml
+++ b/web/themes/custom/caesar/templates/patterns/molecules/grid/m-grid.ui_patterns.yml
@@ -10,3 +10,8 @@ m_grid:
     extra_classes:
       type: textfield
       label: Add extra CSS classes for atom button separated by spaces.
+  libraries:
+    - m-grid:
+        css:
+          component:
+            m-grid.css: {}
