--- a/web/themes/custom/caesar/templates/patterns/atoms/button/package.json
+++ b/web/themes/custom/caesar/templates/patterns/atoms/button/package.json
@@ -6,6 +6,6 @@
     "@splidejs/splide": "^4.1.4"
   },
   "scripts": {
-    "build": "vite build"
+    "build": "vite build --config='../../../../vite.components-config.js' "
   }
 }
