--- a/web/themes/custom/caesar/templates/patterns/molecules/grid/package.json
+++ b/web/themes/custom/caesar/templates/patterns/molecules/grid/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "vite build"
+    "build": "vite build --config='../../../../vite.components-config.js' "
+  },
+  "dependencies": {
+    "@caesar/a-button": "*"
   }
 }
