--- a/web/themes/custom/caesar/templates/patterns/atoms/icon/package.json
+++ b/web/themes/custom/caesar/templates/patterns/atoms/icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@caesar/a-icon",
-  "version": "1.0.0",
+  "version": "0.0.1-alpha.0",
   "license": "MIT",
   "scripts": {
     "build": "vite build --config='../../../../vite.components-config.js' "
