--- a/web/themes/custom/caesar/templates/patterns/atoms/button/package.json
+++ b/web/themes/custom/caesar/templates/patterns/atoms/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@caesar/a-button",
-  "version": "1.0.0",
+  "version": "0.0.1-alpha.0",
   "license": "MIT",
   "dependencies": {
     "@splidejs/splide": "^4.1.4"
