--- a/web/themes/custom/caesar/templates/patterns/molecules/grid/package.json
+++ b/web/themes/custom/caesar/templates/patterns/molecules/grid/package.json
@@ -1,8 +1,5 @@
 {
   "name": "@caesar/m-grid",
   "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "vite build"
-  }
+  "license": "MIT"
 }
