--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "composer/installers": "^2.0",
         "cweagans/composer-patches": "^1.7",
+        "drupal/components": "^3.0@beta",
         "drupal/core-composer-scaffold": "^10.0.2",
         "drupal/core-project-message": "^10.0.2",
         "drupal/core-recommended": "^10.0.2",
