--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -34,21 +34,24 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-yml": "^1.4.0",
     "glob": "^8.1.0",
-    "js-yaml": "^4.1.0",
+    "open-props": "^1.5.5",
     "postcss": "^8.4.21",
     "postcss-custom-media": "^9.0.1",
     "postcss-custom-media-generator": "^1.1.0",
+    "postcss-jit-props": "^1.0.9",
     "postcss-nested": "^6.0.0",
     "postcss-pxtorem": "^6.0.0",
     "prettier": "^2.8.3",
     "rollup-plugin-copy": "^3.4.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^6.0.1",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "yaml": "^2.2.1"
   },
   "scripts": {
     "build": "vite build",
     "bc": "yarn workspaces run vite build --config='../../../../vite.components-config.js'",
+    "wc": "yarn workspaces run vite build --watch --config='../../../../vite.components-config.js'",
     "build-storybook": "storybook build",
     "storybook": "storybook dev -p 6006",
     "lint": "stylelint \"**/*.css\" $FIX_FLAG && eslint --ext .yml . $FIX_FLAG && eslint . $FIX_FLAG --max-warnings 0",
