Image styles simplify

--- a/web/themes/custom/caesar/.eslintrc.json
+++ b/web/themes/custom/caesar/.eslintrc.json
@@ -32,6 +32,7 @@
     "no-underscore-dangle": ["off"],
     "max-nested-callbacks": ["warn", 3],
     "import/no-mutable-exports": ["warn"],
+    "import/no-extraneous-dependencies": ["off"],
     "no-plusplus": ["warn", {
       "allowForLoopAfterthoughts": true
     }],
