--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -27,9 +27,10 @@
     "twig": "^1.15.4"
   },
   "dependencies": {
+    "@drupal/once": "^1.0.1",
     "@splidejs/splide": "^4.1.4",
     "autoprefixer": "^10.4.13",
-    "body-scroll-lock": "^4.0.0-beta.0",
+    "body-scroll-lock": "3.1.5",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
