--- a/web/themes/custom/caesar/.prettierrc.json
+++ b/web/themes/custom/caesar/.prettierrc.json
@@ -2,5 +2,14 @@
   "printWidth": 80,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "overrides": [
+    {
+        "files": ["**/*.css"],
+        "options": {
+            "singleQuote": false,
+            "printWidth": 1000
+        }
+    }
+  ]
 }
