--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.2.0",
     "sharp-cli": "^4.1.0",
     "storybook": "^7.0.0-beta.19",
-    "stylelint": "^14.16.1",
+    "stylelint": "^15.2.0",
     "svg-sprite": "^2.0.2",
     "svgo": "^3.0.2",
     "twig": "^1.15.4"
@@ -41,17 +41,18 @@
     "leaflet": "^1.9.3",
     "open-props": "^1.5.5",
     "postcss": "^8.4.21",
-    "postcss-custom-media": "^9.0.1",
+    "postcss-custom-media": "^9.1.2",
     "postcss-custom-media-generator": "^1.1.0",
+    "postcss-discard-empty": "^5.1.1",
     "postcss-header": "^3.0.3",
-    "postcss-jit-props": "^1.0.9",
-    "postcss-nested": "^6.0.0",
+    "postcss-jit-props": "^1.0.11",
+    "postcss-nested": "^6.0.1",
     "postcss-pxtorem": "^6.0.0",
     "prettier": "^2.8.3",
     "rollup-plugin-copy": "^3.4.0",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-order": "^6.0.1",
-    "vite": "^4.0.4",
+    "stylelint-config-standard": "^30.0.1",
+    "stylelint-order": "^6.0.2",
+    "vite": "^4.1.4",
     "yaml": "^2.2.1"
   },
   "scripts": {
@@ -69,8 +70,9 @@
     "bc": "yarn workspaces run vite build --config='../../../../vite.components-config.js'",
     "wc": "yarn workspaces run vite build --watch --config='../../../../vite.components-config.js'",
     "storybook": "storybook dev -p 6006",
-    "lint": "stylelint \"**/*.css\" $FIX_FLAG && eslint --ext .yml . $FIX_FLAG && eslint . $FIX_FLAG --max-warnings 0",
-    "lint:fix": "FIX_FLAG=--fix yarn lint",
+    "lint": "stylelint \"**/*.css\" --config='./.stylelintrc' $FIX_FLAG && eslint --ext .yml . $FIX_FLAG && eslint . $FIX_FLAG --max-warnings 0",
+    "lint:fix": "FIX_FLAG=--fix yarn lint && yarn prettier",
+    "prettier": "prettier --write \"./**/*.css\"",
     "favicon": "mkdir -p favicon && real-favicon generate favicon.config.json favicon.output.json favicon && rm favicon.output.json",
     "sprite": "yarn sprite:removeOld && yarn sprite:createTemp && yarn sprite:strokeToFill && yarn sprite:optimize && yarn sprite:create && yarn sprite:generateText && yarn sprite:removeTemp",
     "sprite:removeOld": "rm images/sprite.svg",
