--- a/web/themes/custom/caesar/.eslintrc.json
+++ b/web/themes/custom/caesar/.eslintrc.json
@@ -33,20 +33,31 @@
     "max-nested-callbacks": ["warn", 3],
     "import/no-mutable-exports": ["warn"],
     "import/no-extraneous-dependencies": ["off"],
-    "no-plusplus": ["warn", {
-      "allowForLoopAfterthoughts": true
-    }],
+    "no-plusplus": [
+      "warn",
+      {
+        "allowForLoopAfterthoughts": true
+      }
+    ],
     "no-param-reassign": ["off"],
     "no-prototype-builtins": ["off"],
-    "valid-jsdoc": ["warn", {
-      "prefer": {
-        "returns": "return",
-        "property": "prop"
-      },
-      "requireReturn": false
-    }],
+    "valid-jsdoc": [
+      "warn",
+      {
+        "prefer": {
+          "returns": "return",
+          "property": "prop"
+        },
+        "requireReturn": false
+      }
+    ],
     "no-unused-vars": ["warn"],
-    "operator-linebreak": ["error", "after", { "overrides": { "?": "ignore", ":": "ignore" } }],
+    "operator-linebreak": [
+      "error",
+      "after",
+      { "overrides": { "?": "ignore", ":": "ignore" } }
+    ],
     "yml/indent": ["error", 2]
-  }
+  },
+  "parserOptions": { "ecmaVersion": 2020 }
 }
