--- a/web/themes/custom/caesar/.eslintignore
+++ b/web/themes/custom/caesar/.eslintignore
@@ -3,5 +3,6 @@ js/**/*.js
 libraries
 node_modules
 templates/patterns/**/*.js
+templates/patterns/**/vendor.*.js
 !templates/patterns/**/*.src.js
 !templates/patterns/**/*.stories.js
