--- a/web/themes/custom/caesar/templates/patterns/atoms/menu/a-menu.ui_patterns.yml
+++ b/web/themes/custom/caesar/templates/patterns/atoms/menu/a-menu.ui_patterns.yml
@@ -30,5 +30,6 @@ a_menu:
       label: Add extra CSS classes for atom button separated by spaces.
   libraries:
     - a-menu:
-        js:
-          a-menu.js: {}
+        css:
+          component:
+            a-menu.css: {}
