Updated to SB 7 rc

--- a/web/themes/custom/caesar/package.json
+++ b/web/themes/custom/caesar/package.json
@@ -6,12 +6,9 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@originjs/vite-plugin-content": "^1.0.2",
-    "@storybook/addon-essentials": "^7.0.0-beta.19",
-    "@storybook/addon-interactions": "^7.0.0-beta.19",
-    "@storybook/blocks": "^7.0.0-beta.19",
-    "@storybook/html": "^7.0.0-beta.19",
-    "@storybook/html-vite": "^7.0.0-beta.19",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-essentials": "^7.0.0-rc.4",
+    "@storybook/html": "^7.0.0-rc.4",
+    "@storybook/html-vite": "^7.0.0-rc.4",
     "cli-real-favicon": "^0.0.8",
     "drupal-attribute": "^1.0.2",
     "drupal-twig-extensions": "^1.0.0-beta.4",
@@ -20,8 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp-cli": "^4.1.0",
-    "storybook": "^7.0.0-beta.19",
-    "stylelint": "^15.2.0",
+    "storybook": "^7.0.0-rc.4",
+    "stylelint": "^15.3.0",
     "svg-sprite": "^2.0.2",
     "svgo": "^3.0.2",
     "twig": "^1.15.4"
@@ -29,17 +26,16 @@
   "dependencies": {
     "@drupal/once": "^1.0.1",
     "@splidejs/splide": "^4.1.4",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "body-scroll-lock": "3.1.5",
-    "eslint": "^8.32.0",
+    "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-yml": "^1.4.0",
-    "glob": "^8.1.0",
-    "leaflet": "^1.9.3",
-    "open-props": "^1.5.5",
+    "glob": "^9.3.0",
+    "open-props": "^1.5.6",
     "postcss": "^8.4.21",
     "postcss-custom-media": "^9.1.2",
     "postcss-custom-media-generator": "^1.1.0",
@@ -50,9 +46,9 @@
     "postcss-pxtorem": "^6.0.0",
     "prettier": "^2.8.3",
     "rollup-plugin-copy": "^3.4.0",
-    "stylelint-config-standard": "^30.0.1",
-    "stylelint-order": "^6.0.2",
-    "vite": "^4.1.4",
+    "stylelint-config-standard": "^31.0.0",
+    "stylelint-order": "^6.0.3",
+    "vite": "^4.2.0",
     "yaml": "^2.2.1"
   },
   "scripts": {
