--- a/web/themes/custom/skilld/package.json
+++ b/web/themes/custom/skilld/package.json
@@ -69,9 +69,8 @@
     "build:components:js": "yarn vite build --config='vite.components-js.config.js'",
     "build:storybook": "storybook build",
     "storybook": "storybook dev",
-    "lint": "stylelint \"**/*.css\" --config='./.stylelintrc' $FIX_FLAG && eslint --ext .yml . $FIX_FLAG && eslint . $FIX_FLAG --max-warnings 0",
-    "lint:fix": "FIX_FLAG=--fix yarn lint && yarn prettier",
-    "prettier": "prettier --write .",
+    "lint": "stylelint \"**/*.css\" --config='./.stylelintrc' & eslint --ext .yml . & eslint . --max-warnings 0 & prettier -c .",
+    "lint:fix": "stylelint \"**/*.css\" --config='./.stylelintrc' --fix & eslint --ext .yml . --fix & eslint . --fix --max-warnings 0 & prettier -w . --loglevel silent",
     "favicon": "mkdir -p favicon && real-favicon generate favicon.config.json favicon.output.json favicon && rm favicon.output.json",
     "sprite": "yarn sprite:removeOld && yarn sprite:createTemp && yarn sprite:strokeToFill && yarn sprite:optimize && yarn sprite:create && yarn sprite:generateText && yarn sprite:removeTemp",
     "sprite:removeOld": "rm -f images/sprite.svg",
